Get the reinstaller working again
Finally had the time to get this back up and running. This reinstaller
does NOT do anything with the GitHub repositories; it merely clones
whatever is there. We should have instructions somewhere for how to
delete and re-fork the repositories if someone wants a full reinstall
from scratch.

Later on I'll do the promised OAuth linkage to allow people to do this
from the Dreamhack server by running another command, but for now this
will do.

--- a/INSTALL
+++ b/INSTALL
@@ -331,7 +331,7 @@ apt-get install acct emacs joe mc mutt finger info openssh-blacklist openssl-bla
 # To allow spell-checking on the Dreamhacks
 apt-get install aspell
 # Perl modules for the aux Dreamhack scripts:
-apt-get install libquota-perl libfile-temp-perl libpasswd-unix-perl libtext-csv-perl
+apt-get install libquota-perl libfile-temp-perl libpasswd-unix-perl libtext-csv-perl libipc-run3-perl
 cpan Text::CSV::Slurp
 # Modules that some people on the server use for automated testing/formatting:
 apt-get install libperl-critic-perl libpod-coverage-perl libtest-pod-coverage-perl
